Make the Services section of website

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>گروه آبی</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/services.css">
 </head>
 <body>
     <header>
@@ -32,5 +33,32 @@
             <img src="images/team.jpg" class="header__left__images">
         </div>
     </header>
+    <main>
+        <section class="services">
+            <div class="services__right">
+                <h2 class="services__title">خدمات ما</h2>
+                <p class="services__text">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
+                <a class="services__link" href="#">شروع کنید</a>
+            </div>
+            <div class="services__left">
+                <div class="services__item">
+                    <h3 class="services__item__title">دوره های آموزشی</h3>
+                    <p class="services__item__text">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</p>
+                </div>
+                <div class="services__item">
+                    <h3 class="services__item__title">طرحی سایت</h3>
+                    <p class="services__item__text">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</p>
+                </div>
+                <div class="services__item">
+                    <h3 class="services__item__title">بهینه سازی سئو</h3>
+                    <p class="services__item__text">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</p>
+                </div>
+                <div class="services__item">
+                    <h3 class="services__item__title">مشاوره کسب و کار</h3>
+                    <p class="services__item__text">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
